fixed navbar height and events alignement

--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@
 
 .navbar {
   background: linear-gradient(to bottom, #0673b6, #000000);
-  height: 150px;
+  height: 100px;
   display: flex;
   justify-content: center;
   align-items:center;
@@ -550,7 +550,7 @@
   }
 }
 
-/* Services Section */
+/* Merch Section */
 .services {
   background: #000000;
   display: flex;
@@ -694,6 +694,67 @@
     grid-template-columns: 1fr;
   }
 }
+
+/* Events CSS */
+.events {
+  background: #000000;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: auto;
+  padding: 10rem 0;
+}
+
+.events h1 {
+  background-color: #ffffff;
+  background-image: linear-gradient(to right, #ffffff 0%, #ffffff 100%);
+  background-size: 100%;
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -moz-text-fill-color: transparent;
+  margin-bottom: 3rem;
+  font-size: 2.5rem;
+}
+
+.events h2 {
+  background-color: #ffffff;
+  background-image: linear-gradient(to right, #ffffff 0%, #ffffff 100%);
+  background-size: 100%;
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -moz-text-fill-color: transparent;
+  margin-bottom: 5rem;
+  font-size: 2.5rem;
+}
+
+.events h3 {
+  background-color: #ffffff;
+  background-image: linear-gradient(to right, #ffffff 0%, #ffffff 100%);
+  background-size: 100%;
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -moz-text-fill-color: transparent;
+  margin-bottom: 2rem;
+  align-items: center;
+  font-size: 1.0rem;
+}
+
+@media (max-width: 768px) {
+  .events h3 {
+    text-align: center;
+  }
+  
+  .events .line {
+    width: 50%;
+    margin: 0 auto;
+  }
+}
+
 
 /* Footer CSS */
 .footer__container {
